--- a/css/blog.css
+++ b/css/blog.css
@@ -25,7 +25,7 @@ body {
 div.content {
 	display: grid;
 	width :100%;
-	grid-template-columns: repeat(2, minmax(250px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
 	border: 2px;
 	padding:10px;
 	margin-top: 0;
