--- a/css/styles.css
+++ b/css/styles.css
@@ -1,171 +1,159 @@
 body {
-	font-family: Arial;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	color:white;
-	background-color:rgba(200,161,200, .5);
-	background-image: url("bg2.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size:cover;
-	margin: 0;
-
+  font-family: Arial;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: rgba(200, 161, 200, 0.5);
+  background-image: url("bg2.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  margin: 0;
 }
 
 h1 {
-	margin: 0 !important;
-	font-family: Arial
-	color: white;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	text-align:center;
-	font-size: 200%;
-	background-color:rgb(200,161,200, .5);
-	padding: 15px;
-	box-shadow: 0px 2px 5px grey;
-	position: sticky;
-	top:0;
+  margin: 0 !important;
+  font-family: Arial;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  font-size: 200%;
+  background-color: rgb(200, 161, 200, 0.5);
+  padding: 15px;
+  box-shadow: 0px 2px 5px grey;
+  position: sticky;
+  top: 0;
 }
 .center {
-	display:block;
-	margin-left:auto;
-	margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 a:link {
-	color: black;
-	text-decoration: none;
-	font-family: monospace;
+  color: black;
+  text-decoration: none;
+  font-family: monospace;
 }
 a:visited {
-	color:grey;
+  color: grey;
 }
 h2 {
-	margin-right: 125px;
-	color:black;
-	background-color: rgb(255,255,255,.25);
-	font-size: 10px;
-	text-align:right;
-	margin-left: -10px;
-	font-family: Arial;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	border-radius: 20px;
+  margin-right: 125px;
+  color: black;
+  background-color: rgb(255, 255, 255, 0.25);
+  font-size: 10px;
+  text-align: right;
+  margin-left: -10px;
+  font-family: Arial;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  border-radius: 20px;
 }
 p {
-	text-align: justify;
-	font-size: 18px;
-	text-indent: 50px;
-	border: 2px;
-	border-top: 5px dotted rgba(255,100,150); .75);
-	background-color: rgba(200,161,200, .5);
-	padding : 20px;
-	box-shadow: 0 5px 5px grey;
-	
+  text-align: justify;
+  font-size: 18px;
+  text-indent: 50px;
+  border: 2px;
+  border-top: 5px dotted rgba(255, 100, 150, 0.75);
+  background-color: rgba(200, 161, 200, 0.5);
+  padding: 20px;
+  box-shadow: 0 5px 5px grey;
 }
 table {
-	padding:20px;
-	text-align: center;
-	width:100%;
-	height:100%;
-	font-weight: bold;
-	background-color:rgba(200,161,200, .5);
-	border-radius: 20px; 
-	box-shadow: 0 5px 5px grey;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+  background-color: rgba(200, 161, 200, 0.5);
+  border-radius: 20px;
+  box-shadow: 0 5px 5px grey;
 }
 
 .content {
-	margin:10%;
-	margin-top: 1%;
-	font-family: Arial;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  margin: 10%;
+  margin-top: 1%;
+  font-family: Arial;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .fit {
-	margin:7.5%;
-	margin-top:1%;
+  margin: 7.5%;
+  margin-top: 1%;
 }
 div.gallery {
-	margin :6px;
-	float:left;
-	color: black;
+  margin: 6px;
+  float: left;
+  color: black;
 
-	box-shadow: 2px 2px 10px grey;
-	font-family: Arial;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	text-align:center;
-	background-color: white;
-
-	
+  box-shadow: 2px 2px 10px grey;
+  font-family: Arial;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  background-color: white;
 }
 
 div.gallery img {
-	width:240px;
-	height:240px;
-	object-fit:cover;
-
+  width: 240px;
+  height: 240px;
+  object-fit: cover;
 }
 div.gallery:hover {
-
-	box-shadow: 0 5px 100px 0 white;
-	position: relative;
-
+  box-shadow: 0 5px 100px 0 white;
+  position: relative;
 }
 
 div.description {
-	padding : 15px;
-	text-align: center;
-	
+  padding: 15px;
+  text-align: center;
 }
 div.videos {
-	margin :6px;
-	float:left;
-	color: black;
+  margin: 6px;
+  float: left;
+  color: black;
 
-	box-shadow: 2px 2px 10px grey;
-	font-family: Arial;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	text-align:center;
-	background-color: white;
-
+  box-shadow: 2px 2px 10px grey;
+  font-family: Arial;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  background-color: white;
 }
-div.videos:hover{
-
-	box-shadow: 0 5px 100px 0 white;
-	position: relative;
+div.videos:hover {
+  box-shadow: 0 5px 100px 0 white;
+  position: relative;
 }
-div.videos img{
-	width:240px;
-	height:240px;
-	object-fit:cover;
+div.videos img {
+  width: 240px;
+  height: 240px;
+  object-fit: cover;
 }
 .navigator {
-	background-color: none;
-	text-align:center; 
-	margin-left: 0px;
-	margin-right: 0px;	
+  background-color: none;
+  text-align: center;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 .footer {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	font-size: 90%;
-	padding: 2px;
-	background-color:rgb(198, 100, 159, .75);
-	color: white;
-	text-align:right;
-
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  font-size: 90%;
+  padding: 2px;
+  background-color: rgb(198, 100, 159, 0.75);
+  color: white;
+  text-align: right;
 }
 
 .announcements {
-	text-align: left;
-	font-size: 18px;
-	border: 2px;
-	background-color: black;
-	padding : 20px;
-	margin-bottom: 15px;
-	box-shadow: 0 5px 10px white;
-
+  text-align: left;
+  font-size: 18px;
+  border: 2px;
+  background-color: black;
+  padding: 20px;
+  margin-bottom: 15px;
+  box-shadow: 0 5px 10px white;
 }
